--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -50,12 +50,12 @@ URL = "about/"
 weight = 1
 
 [[menu.main]]
-name = "Post"
+name = "Posts"
 URL = "blog/"
 weight = 2
 
 [[menu.main]]
-name = "Contact"
+name = "Bookmarks"
 URL = "contact/"
 weight = 3
 
@@ -69,11 +69,6 @@ weight = 1
 name = "Post"
 URL = "blog/"
 weight = 2
-
-[[menu.footer]]
-name = "Contact"
-URL = "contact/"
-weight = 3
 
 
 #################### default parameters ################################
@@ -99,7 +94,7 @@ preloader = "" # use .png , .svg or .gif format
 
 # search
 [params.search]
-enable = true
+enable = false
 
 ############################ news letter ########################
 [params.newsletter]
