--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -105,7 +105,7 @@ content = "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam non
 
 # cookies
 [params.cookies]
-enable = true
+enable = false
 expire_days = 2
 
 
@@ -123,4 +123,4 @@ link = "#"
 [[params.social]]
 title = "linkedin"
 icon = "ti-linkedin" # themify icon : https://themify.me/themify-icons
-link = "#"
+link = "https://www.linkedin.com/in/shouryalala/"
