update: new post on retail POS

--- a/authorSite/config.toml
+++ b/authorSite/config.toml
@@ -77,7 +77,7 @@ logo = "images/logo.png"
 home = "Home"
 # Meta data
 description = "This is meta description"
-author = "Themefisher"
+author = "Shourya"
 # Google Analitycs
 googleAnalitycsID = "349509387"
 # Contact Information
