--- a/authorSite/config.toml
+++ b/authorSite/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://demo.gethugothemes.com/liva/examplesite/"
+baseURL = "https://shourya.io/shourya/personal-page/"
 languageCode = "en-us"
 title = "Shourya Lala"
 theme = "personal-page"
