--- a/config.toml
+++ b/config.toml
@@ -32,12 +32,6 @@ URL = "plugins/bootstrap/bootstrap.min.js"
 URL = "plugins/slick/slick.min.js"
 [[params.plugins.js]]
 URL = "plugins/venobox/venobox.min.js"
-[[params.plugins.js]]
-URL = "plugins/search/fuse.min.js"
-[[params.plugins.js]]
-URL = "plugins/search/mark.js"
-[[params.plugins.js]]
-URL = "plugins/search/search.js"
 
 
 ############################## navigation ###############################
@@ -51,12 +45,12 @@ weight = 1
 
 [[menu.main]]
 name = "Posts"
-URL = "blog/"
+URL = "posts/"
 weight = 2
 
 [[menu.main]]
 name = "Bookmarks"
-URL = "contact/"
+URL = "bookmark/"
 weight = 3
 
 # footer menu
@@ -67,7 +61,7 @@ weight = 1
 
 [[menu.footer]]
 name = "Post"
-URL = "blog/"
+URL = "blognd/"
 weight = 2
 
 
