--- a/config.toml
+++ b/config.toml
@@ -73,7 +73,7 @@ home = "Home"
 description = "This is meta description"
 author = "Shourya"
 # Google Analitycs
-googleAnalitycsID = "349509387"
+googleAnalitycsID = "G-2FWW948PYS"
 # Contact Information
 mobile = "0124857985320"
 email = "shouryalala@gmail.com"
